# GCPad_API

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  gcpad.vcxproj  vcpkg.json
.github/workflows/: build.yml
GCPad_Frontend/: CMakeLists.txt
GCPad_Frontend/config/: Half-Life 2.gcpad_profile
GCPad_Frontend_CMD/: CMakeLists.txt
GCPad_Frontend_CMD/config/: Half-Life.gcpad_profile
GCPad_Frontend_CMD/src/: main.cpp
GCPad_Frontend_GUI/: CMakeLists.txt
GCPad_Frontend_GUI/src/: main.cpp
GCPad_Lib/: CMakeLists.txt  GCPadConfig.cmake.in  version.rc.in
GCPad_Lib/include/: GamepadManager.h  gcpad.h  gcpad_c.h
GCPad_Lib/internal/: controller_library.h  nintendo_device.h  usb_interface_parser.h  xbox_device.h
GCPad_Lib/libs/: dinput8.lib
GCPad_Lib/src/: GamepadManager.cpp  build_metadata.cpp  dinput_device.cpp  gcpad_c.cpp  hid_device.cpp  ps_device.cpp  sdl_device.cpp  xbox_device.cpp  xinput_device.cpp
GCPad_Remap/: CMakeLists.txt
GCPad_Remap/include/: gamepad_input_remapper.h
GCPad_Remap/src/: gamepad_input_remapper.cpp  gcpad_remap_c.cpp
docs/: API-Reference.md  Adding-Controllers.md  Building.md  Core-Library.md  Frontend-Implementation.md  Home.md  Input-Remapping.md  Quick-Start.md  _Sidebar.md
examples/: gcpad_example.cpp
gcpadLib/: controller_library.cpp  gamepad_input_remapper.cpp  gamepad_input_remapper.h  usb_interface_parser.cpp
include/: GamepadManager.h  dinput_device.h  gcpad.h  gcpad_c.h  hid_device.h  ps_device.h  sdl_device.h  xinput_device.h
libs/: SDL2.lib  dxguid.lib
src/: GamepadManager.cpp  dinput_device.cpp  gcpad_c.cpp  hid_device.cpp  nintendo_device.cpp  ps_device.cpp  sdl_device.cpp  xbox_device.cpp  xinput_device.cpp
